# xcoreutilspp

./: CMakeLists.txt  README.md  build.bat  build.sh
cat/: CMakeLists.txt
cat/src/: CMakeLists.txt  cat.cpp
include/: io.h  xcoreutils.h
seq/: CMakeLists.txt
seq/src/: CMakeLists.txt  seq.cpp
